2005-06-02  Ross Burton  <ross@burtonini.com>

	* src/sj-structures.[ch]:
	Add a GDate to the album, for the release date.

	* src/sj-metadata-musicbrainz.c:
	Get the release date from Musicbrainz.

	* src/sj-extractor.c:
	Write the release date.

	* src/sj-prefs.c:
	Add NULL date to sample album.

2005-05-21  Dafydd Harries  <daf@muse.19inch.net>

	* configure.in:
	Add "cy" (Welsh) to ALL_LINGUAS.

2005-05-20  Ross Burton  <ross@burtonini.com>

	* src/sj-structures.[ch]:
	* src/sj-metadata-musicbrainz.c:
	* src/sj-extractor.c:
	* src/sj-prefs.c:
	Add track artist ID.

2005-05-20  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Depend on gstreamer-plugins-dev 0.8.8 and nautilus-burn 2.11.1

	* src/sj-structures.[ch]:
	Added fields for the MusicBrainz identifiers.

	* src/sj-metadata-musicbrainz.c:
	Set the MusicBrainz identifiers.

	* src/sj-extractor.c:
	Write the MusicBrainz identifiers.

	* src/sj-prefs.c:
	Update for new structures.

2005-05-20  Ross Burton  <ross@burtonini.com>

	* src/sj-structures.h:
	* src/sj-prefs.c:
	Add GtkTreeIter element to the track data.

	* src/sj-extracting.c:
	Set the iter for each track we are extracting, and uncheck each
	row when completed.

2005-05-20  Ross Burton  <ross@burtonini.com>

	* src/sj-util.c:
	Slightly better drive detection logic.

2005-05-19  Ross Burton  <ross@burtonini.com>

	* src/dummy.cpp:
	* src/Makefile.am:
	Add dummy C++ file to force g++. Closes #303899.

2005-05-19  Ross Burton  <ross@burtonini.com>

	* src/sj-util.c:
	If we can't open the device, pretend its an audio CD and let
	something else moan.  All of this code needs to be replaced.
	
2005-05-19  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Don't free the GError in the signal handler, this causes a crash
	(closes #126753).

2005-05-19  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Focus the list view.

2005-05-19  Ross Burton  <ross@burtonini.com>

	* configure.in: Depend on nautilus-burn 2.11.
	