@@ -455,7 +455,7 @@ show_finished_dialog (void)
                                    _("The tracks have been copied successfully."));
   /* If we eject when finished, eject now, otherwise add a button */
   if (eject_finished) {
-    eject_cdrom (drive, GTK_WINDOW (main_window));
+    nautilus_burn_drive_eject (drive);
   } else {
     gtk_dialog_add_buttons (GTK_DIALOG (dialog), _("_Eject"), 2, NULL);
   }
@@ -472,7 +472,7 @@ show_finished_dialog (void)
     g_spawn_command_line_async (command, NULL);
     g_free (command);
   } else if (result == 2) {
-    eject_cdrom (drive, GTK_WINDOW (main_window));
+    nautilus_burn_drive_eject (drive);
   }
   g_free (base);
 }
