@@ -25,16 +25,8 @@
 
 #include <sys/types.h>
 #include <glib/gerror.h>
-#include <gtk/gtkwindow.h>
-#include <nautilus-burn-drive.h>
 
 void mkdir_recursive (const char *path, mode_t permission_bits, GError **error);
-
-void eject_cdrom (NautilusBurnDrive *drive, GtkWindow *parent);
-
-gboolean tray_is_opened (NautilusBurnDrive *drive);
-
-gboolean is_audio_cd (NautilusBurnDrive *drive);
 
 void g_list_deep_free (GList *l, GFunc free_func);
 
