@@ -1,5 +1,14 @@
 2005-06-02  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-utils.[ch]:
+	Hack away large chunks of this and use nautilus-burn 2.11.1.
+
+	* src/sj-extracting.c:
+	* src/sk-main.c:
+	Use nautilus-burn rather than sj-util.
+
+2005-06-02  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-structures.[ch]:
 	Add a GDate to the album, for the release date.
 
